src/main/default/objects/aforza__Inventory_Product__c/fields/JdeStockQuantity__c.field-meta.xml
<CustomField>
    <fullName>JdeStockQuantity__c</fullName>
    <description>Updated automatically via JDE System Integration.</description>
    <defaultValue>0</defaultValue>
    <label>JDE Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>