src/main/default/objects/aforza__Inventory_Product__c/fields/NonSalableStock__c.field-meta.xml
<CustomField>
    <fullName>NonSalableStock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated automatically via JDE System Integration.</description>
    <label>Non-Salable Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>