src/main/default/objects/aforza__Inventory_Product__c/fields/OffSale__c.field-meta.xml
<CustomField>
    <fullName>OffSale__c</fullName>
    <description>Indicates if a product is off sale for a specific inventory</description>
    <label>Off Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>