src/main/default/objects/aforza__Inventory_Product__c/fields/PickingLocation__c.field-meta.xml
<CustomField>
    <fullName>PickingLocation__c</fullName>
    <inlineHelpText>Picking location for this inventory product</inlineHelpText>
    <label>Picking Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>